clang/test/BSC/Negative/Ownership/RuleCheck/rewrite_bsc_owned3/rewrite_bsc_owned3.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

struct A {
    _Owned int a; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
};

struct B {
    _Owned int b; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
};

struct C {
    _Owned int** c; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
};

struct D { struct C c; };

struct E {
    int _Owned e; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
};

struct F {
    int* _Owned f;
};

struct G {
    int** _Owned g;
};

struct H {
    int* _Owned *  h;
};

_Owned int (a)(); // expected-error {{type of 'int' cannot be qualified by '_Owned'}}

_Owned int* (b)(); // expected-error {{type of 'int' cannot be qualified by '_Owned'}}

_Owned int** (c)(); // expected-error {{type of 'int' cannot be qualified by '_Owned'}}


// as return type
_Owned int case1() { // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
  return 0;
}

_Owned int* case2() { // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
  return 0;
}

_Owned int** case3() { // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
  return 0;
}

// as param type
_Owned int case5(_Owned int a) { // expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{type of 'int' cannot be qualified by '_Owned'}}
}

int case6(_Owned int* a) { // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
  return 0;
}

int case7(_Owned int** a) { // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
  return 0;
}

// as local var type
_Owned int case8() { // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
  _Owned int a = 1; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
  return a;
}

int case9() {
  _Owned int* a = 0; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
  return 0;
}

int case10() {
  _Owned int** a = 0; // expected-error {{type of 'int' cannot be qualified by '_Owned'}} 
  return 0;
}

int case11() {
  (_Owned int*)0; // expected-warning {{expression result unused}}
  return 0;
}

int main() {
    struct D * d;
    return 0;
}

